WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163896
Dumping of op_negate bytecode is broken.
https://bugs.webkit.org/show_bug.cgi?id=163896
Summary
Dumping of op_negate bytecode is broken.
Mark Lam
Reported
2016-10-24 10:15:31 PDT
It's thinks the bytecode consists of only 3 machine words, when it consists of 4.
Attachments
proposed patch.
(1.23 KB, patch)
2016-10-24 10:18 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-10-24 10:16:11 PDT
(In reply to
comment #0
)
> It's thinks the bytecode consists of only 3 machine words, when it consists > of 4.
/It's/It/
Mark Lam
Comment 2
2016-10-24 10:18:44 PDT
Created
attachment 292621
[details]
proposed patch.
Darin Adler
Comment 3
2016-10-24 10:21:53 PDT
Comment on
attachment 292621
[details]
proposed patch. Do we have regression tests for this sort of thing?
Mark Lam
Comment 4
2016-10-24 10:23:53 PDT
(In reply to
comment #3
)
> Comment on
attachment 292621
[details]
> proposed patch. > > Do we have regression tests for this sort of thing?
Not that I know of. The dumper is a debugging tool, and it fails instantaneously on use right at the site of use. So, it should be easy to debug and fix.
WebKit Commit Bot
Comment 5
2016-10-24 10:56:29 PDT
Comment on
attachment 292621
[details]
proposed patch. Clearing flags on attachment: 292621 Committed
r207765
: <
http://trac.webkit.org/changeset/207765
>
WebKit Commit Bot
Comment 6
2016-10-24 10:56:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug