Dumping of op_negate bytecode is broken. https://bugs.webkit.org/show_bug.cgi?id=163896

Reviewed by Darin Adler.

It thinks the bytecode consists of only 3 machine words, when it consists of 4.
This is now fixed.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::dumpBytecode):


Canonical link: https://commits.webkit.org/181626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207765 268f45cc-cd09-0410-ab3c-d52691b4dbfc